	'reevaluate-elites' parameter in SimpleBreeder incorrectly misspelled as
		'reevalate-elites', oops.
	Bug fix to SimpleBreeder.markElitesEvaluated to properly unmark more than one elite.
		Thanks to Jeroen Lappenschaar <jlappenschaar@gmail.com> and Mart Hagenaars
		<marthagenaars@gmail.com>
	Bug fix to CompetitiveMaxOnes demo, which was dividing too many times to average.
		Thanks to Joey Harrison <jharri1@gmu.edu>
	Removed a few references to gather-full in statistics demos
	Big revisions to SimpleShortStatistics and its relationships to KozaShortStatistics
	Deleted San Marino Problem
	Default run-evolve setting for ec/eval/slave.params set to false
	Removed EdgeShortStatistics
	Added some code for optionally sending information over a stream to a Slave to set it up
		from the Master
	Bug fix to escapes in Code.java, thanks to Ben Stabile <bennett.stabile@gmail.som>
	Made GPNodeConstraints.setup, GPTreeConstraints.setup, and GPNode.verify non-final
	Added ec.util.ThreadPool
	Slave now does non-evolve evals in a multithreaded fashion if asked to
	Reindented
	Added facility for NOT cloning the breeding pipeline, population, or problem, to make
		single-state evolution faster.  By default you should ignore this parameter
		(in SimpleBreeder and SimpleEvaluator).  Expect this facility to change over 
		time before it becomes official.
	Added Population.clear() and Subpopulation.clear()
	Made ParameterDatabase.directoryFor private
	Deleted ParameterDatabase.fileFor
	Deleted ParameterDatabase.listeners
	Deleted ParameterDatase.filename
	Added ParameterDatsabase.label and getLabel()
	Redefined getLocation() to return a parameter database rather than a String
	Modified Evolve.loadParameterDatabase to allow -from and -at parameters to specify
		loading from a parameter file stored as a resource rather than from an
		explicit file.
	Added 'make jar' to Makefile
	Modified ec/app/ant/Ant.java to use new resource loading option