@@ -223,10 +223,11 @@ public class Edge extends GPProblem implements SimpleProblemForm
 
 
 
-    public boolean[][] slurp(final File f)
-        throws IOException
+//    public boolean[][] slurp(final File f) throws IOException
+    public boolean[][] slurp(final InputStream f) throws IOException
         {
-        LineNumberReader r = new LineNumberReader(new InputStreamReader(new GZIPInputStream(new FileInputStream(f))));
+        //LineNumberReader r = new LineNumberReader(new InputStreamReader(new GZIPInputStream(new FileInputStream(f))));
+        LineNumberReader r = new LineNumberReader(new InputStreamReader(new GZIPInputStream(f)));
         String bits;
 
         Vector v = new Vector();
@@ -279,6 +280,7 @@ public class Edge extends GPProblem implements SimpleProblemForm
 
         // load the test examples here
 
+        /*
         File ap = null;
         File an = null;
         File tp = null;
@@ -313,6 +315,35 @@ public class Edge extends GPProblem implements SimpleProblemForm
         if (!tp.canRead()) state.output.error("File cannot be read", base.push(P_TESTPOS));
         if (!tn.canRead()) state.output.error("File cannot be read", base.push(P_TESTNEG));
         state.output.exitIfErrors();
+*/
+
+
+        InputStream ap = null;
+        InputStream an = null;
+        InputStream tp = null;
+        InputStream tn = null;
+        int restriction;
+
+        if (generalize)
+            {
+            ap = state.parameters.getResource(base.push(P_ALLPOS),null);
+            an = state.parameters.getResource(base.push(P_ALLNEG),null);
+            }
+
+        tp = state.parameters.getResource(base.push(P_TESTPOS),null);
+        tn = state.parameters.getResource(base.push(P_TESTNEG),null);
+
+        if (generalize)
+            {
+            if (ap==null) state.output.error("File doesn't exist", base.push(P_ALLPOS));
+            if (an==null) state.output.error("File doesn't exist", base.push(P_ALLNEG));
+            }
+
+        if (tp==null) state.output.error("File doesn't exist", base.push(P_TESTPOS));
+        if (tn==null) state.output.error("File doesn't exist", base.push(P_TESTNEG));
+        state.output.exitIfErrors();
+        
+
 
         if (generalize)
             {
